# web-project-template

./: .env.dev  .env.local  .env.production  .env.test  .gitignore  .graphqlconfig  .graphqlrc  .npmrc  AutoUpdateLocalNPMPackages.bat  AutoUpdateLocalNPMPackages.mjs  GraphqlCodegenConfig.esm.mts  MF_v2_Local.bat  MF_v2_Production.ps1  MF_v2_Test.ps1  ModuleFederation_v2_Config.esm.mjs  Nodemon_Dev.bat  Nodemon_Local.bat  README.md  Test.bat  package-lock.json  package.json  postcss.config.mjs  postcss.postcss-modules.config.mjs  postcss.sugarss.config.mjs  ts-node-tsconfig.json  ts-node_tsconfig.json  tsconfig.json  tsconfig.json5  tsconfig.ts-node.json  tsconfig.tsx.json  tsconfig.typedoc.json  tsconfig.webpack.json  tsconfig.webstorm.json  typedoc.json  typedoc_tsconfig.json  webpack.base.esm.mjs  webpack.base.mjs  webpack.dev.esm.mjs  webpack.dev.mjs  webpack.local.esm.mjs  (+10 more)
assist_tools/: 该文件夹说明.txt
backups/: webpack.base.esm.mjs  webpack.test.esm.mjs  该文件夹说明.txt
bats/: .babelrc.Dev.json  .babelrc.Production.json  .babelrc.Test.json  Dashboard_Local.bat  Dashboard_Production.bat  Dashboard_Test.bat  GraphQLCodegen.bat  MF_v2_Dev.bat  MF_v2_Production.bat  MF_v2_Production.ps1  MF_v2_Test.bat  MF_v2_Test.ps1  OpenLocalWebPage.bat  OpenProductionWebPage.bat  Production.bat  SimulationServersDeno.bat  SimulationServersNode.bat  Test.bat  UpdateBabelrcConfig.bat  UpdateGraphQLSchemaJSON.bat  UpdateTSConfigLib.bat  Weinre.bat  该文件夹说明.txt
configures/: DefinePluginConfig.esm.mjs  GlobalProp.js  (+13 more)
src/wasm/source_codes/rust/math_tool/: Cargo.toml  MathTool.ps1  MathTool.rs
(+1419 files in other folders)
